# tn-equicheck-yrw

./: .gitignore  README.md  pack_project.py  pack_scripts.py  pack_src.py  project_context.txt  pyproject.toml  requirements.txt
configs/: mc_convergence.yaml
scripts/: 2026_1_01_shift_sweep_heisenberg_global_YAQS.py  2026_1_01_shift_sweep_ising_vs_heisenberg_global_YAQS.py  2026_1_02_shift_sweep_heisenberg_termwise_YAQS.py  2026_1_02_shift_sweep_ising_vs_heisenberg_termwise_YAQS.py  2026_1_03_layerwise_diagnostics_heisenberg_YAQS.py  2026_1_03_layerwise_ising_vs_heisenberg_YAQS.py  2026_1_04_fidelity_phase_sweep_statevector.py  2026_1_04_phase_noiseless_ising_vs_heisenberg_global.py  2026_1_05_optimize_shift_SPSA_heisenberg_YAQS.py  2026_1_05_spsa_optimize_shift_noisy_ref_YAQS.py  2026_1_21_noisy_compare_global_YAQS.py  2026_1_22_noisy_ising_global_vs_rzz_YAQS.py  2026_1_23_noisy_heisenberg_xx_yy_zz_YAQS.py  2026_1_24_noiseless_phase_breaksym_compare.py  common_shift_tools_2026_1.py  exp_angle_shift_families_strongsim_YAQS_WIN.py  exp_angle_shift_state_fidelity.py  exp_compare_zne_vd_budget_WIN.py  exp_compensation_mixed_strongsim_YAQS_WIN.py  exp_error_vs_gamma_log.py  exp_general_mitigation_AB_VD_win.py  exp_mc_convergence.py  exp_mc_convergence_by_sites_strongsim_YAQS_WIN.py  exp_sites_mask_strongsim_YAQS_WIN.py  exp_sites_prefix_vs_random_strongsim_YAQS_WIN.py  exp_smoke_backend.py  exp_updated_work_1_WIN.py  exp_updated_work_1_fidelity_WIN.py  exp_updated_work_1_fidelity_strongsim_YAQS_WIN.py  final_test_equicheck_mc_suite_YAQS.py  make_ideal_twolocal_n6.py  (+21 more)
(+101 files in other folders)
